[package]
name = "mines"
version = "0.1.0"
authors = ["Rachel K <raech.kanati@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 1
debug = true
panic = "unwind"
overflow-checks = true
lto = false
incremental = true

[profile.release]
opt-level = "z"
debug = false
panic = "abort"
overflow-checks = false
lto = "thin"
incremental = false
codegen-units = 1

[dependencies]
#rand_core = "0.5"
rand      = "0.7"
rand_pcg  = "0.2"
winit     = "0.19"

[dependencies.ggez]
version = "0.5"
default-features = false

